<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    android:backgroundTint="@color/white"
    app:cardElevation="4dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/concat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/m1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeWidth="0dp">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_85sdp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitXY"
                android:src="@drawable/pic1" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/textname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            android:text="@string/mutton"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/m1" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_4sdp"
            android:text="15"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@id/Update"
            app:layout_constraintStart_toEndOf="@id/textname"
            app:layout_constraintTop_toBottomOf="@id/m1" />

        <TextView
            android:id="@+id/weightname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liter"
            android:textColor="@color/black"
            android:textSize="8sp"
            app:layout_constraintBottom_toTopOf="@id/Update"
            app:layout_constraintStart_toEndOf="@id/weight"
            app:layout_constraintTop_toBottomOf="@id/m1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/Update"
            android:layout_width="100dp"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/update"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textname" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
             app:cardCornerRadius="0dp"
            android:backgroundTint="@color/white"
            app:strokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/barcdodescan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/barcode" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>