<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context="com.example.grocery.HelpLineFragment">
    <!-- Toolbar/Header -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/Primary_color"
        android:elevation="4dp"
        app:title="About Us"
        app:titleTextColor="@android:color/white" />

    <!-- Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <!-- App Logo/Image -->
            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="120dp"
                android:layout_margin="@dimen/_6sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:src="@drawable/helpdesk" />


            <!-- App Name -->
            <TextView
                android:id="@+id/text_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!-- About Text -->
            <TextView
                android:id="@+id/text_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/about_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <!-- Contact Information -->
            <TextView
                android:id="@+id/text_contact_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_12sdp"
                android:layout_marginTop="@dimen/spacing_medium"
                android:layout_marginBottom="@dimen/spacing_medium"
                android:text="@string/contact_info"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
             <ImageView
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:id="@+id/whatsapplogo"
                 android:src="@drawable/logo"
                 android:layout_marginVertical="@dimen/_6sdp"
                 android:layout_marginHorizontal="@dimen/_6sdp"/>
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:id="@+id/facebooklogo"
                    android:src="@drawable/facebook"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:layout_marginHorizontal="@dimen/_6sdp"/>
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:id="@+id/tweeterlogo"
                    android:src="@drawable/twitter"
                    android:layout_marginVertical="@dimen/_6sdp"
                    android:layout_marginHorizontal="@dimen/_6sdp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>